--- a/style.css
+++ b/style.css
@@ -22,9 +22,9 @@ html, body {
 
 body{
 	font: 130%/1.3 TrebuchetMS,Arial,sans-serif;  /* Default fonts */
-	text-align: left; /* Alignment of the text */
+	text-align: right; /* Alignment of the text */
 	color: black; /* Main text color */
-	background: white; /* Main text background color */
+	background: blue; /* Main text background color */
 	padding-bottom: 20px; /* You can set padding or margin for one side of an element at a time */
 }
 
@@ -70,13 +70,13 @@ div.section {
 /* This alters the appearance of the div with id="signup". */
 #poem {
 	height: 110px;
-	background: white;
+	background: red;
 	text-align: center;
 }
 
 /* This alters the appearance of the div with id="whoweare" */
 #whoweare {
-	background: white;
+	background: teal;
 	color: black; 
 }
 
